2004-01-27 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b2

	* Bugfix: Fixed Bug introduced in 1.4.2-cvs-b11 (by me).
		  Changed doctype back to be more undetailed.
		  The detailed doctype caused the fitToWindow script not to work when 
		  using IE and Gallery was standalone.

2004-01-26 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b1

	* Bugfix: Changing album permissions who can view comments were broken.

2004-01-25  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.2-RC1

	* v1.4.2 Release Candidate 1

2004-01-24  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b79

        * Fixed remote security exploit in init.php and setup/init.php where 
	  one extract() call can be used to overwrite the input for a 
	  subsequent extract() call letting users overwrite GALLERY_BASEDIR
	
2004-01-21 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b78
	
	* Change: Added possibility for LARGE bordes, bigger Images and MORE pages
		  in edit album properties.

2004-01-21 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b77
	
	* Change: Removed Debug Code (Thanks Joan).

	* Change: Added some quotes.

2004-01-20 Jens Tkotz <jens@peino.de> 1.4.2-cvs-b76

	* Bugfix: If we are in PHP > 4.1.0 we can use 3rd Parameter for htmlentities().
	  This fixes a Problem when editing Album titles. 
	  E.g. in chinese BIG5 or UTF8 they are now displayed correct.

	* Little Skin change. Makes it better with white backgrounds.

	* Removed a unnecessary linebreak for lang pulldown.

2004-01-14 Andrew Lindeman  <joyoflinux@yahoo.com> 1.4.2-cvs-b75

	* Fixed bug #865603.  We now ignore CVS directories in the album
	  directory, so they are not listed as invalid.
	
2004-01-13  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.2-cvs-b74

	* Fixed move-album so it checks that the source and destination
	  galleries exist. This would lead to a grave corruption of the
	  album DB.

2004-01-13  Bharat Mediratta  <bharat@menalto.com> 1.4.2-cvs-b73

	* Committed new version of ImageTools.jar; same as the old one but