@@ -229,11 +229,17 @@ A:hover	{ color: #C0C0C0; }
 	  color: #C0C0C0;
 	  text-decoration: underline;
 	}
-.admin  /* used in admin bars - the serch text*/
+.admin
 	{ 
 	  font-size: 10px;
-	  color: #ffffff; 
 	  font-weight: bold;
+	  color: #65B4FF; 
+	}
+
+.adminform {
+	  font-size: 10px;
+	  font-weight: bold;
+	  color: #6666FF ;
 	}
 .search  /* used in admin bars - the serch text*/
 	{ 
