@@ -5,5 +5,3 @@
 BODY
 	{ 
 	}
-
-.admin	{ color: #6666FF }
