@@ -232,9 +232,15 @@ A:hover	{ color: #C0C0C0; }
 .admin  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
-	  color: #ffffff; 
+	  color: #70FA2C; 
 	  font-weight: bold;
 	}
+
+.adminform {
+          font-size: 10px;
+          font-weight: bold;
+          color: #00B41C ;
+        }
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
