@@ -235,6 +235,13 @@ A:hover	{ color: #E91414; }
 	  color: #ffffff; 
 	  font-weight: bold;
 	}
+
+.adminform
+	{ 
+	  font-size: 10px;
+	  font-weight: bold;
+	  color: #0014AC; 
+	}
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
