@@ -232,9 +232,17 @@ A:hover	{ color: #C0C0C0; }
 .admin  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
-	  color: #ffffff; 
+	  color: #EF91FD; 
 	  font-weight: bold;
 	}
+
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #A9009F;
+        }
+
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
