@@ -232,9 +232,16 @@ A:hover	{ color: #C0C0C0; }
 .admin  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
-	  color: #ffffff; 
+	  color: #FE8880; 
 	  font-weight: bold;
 	}
+
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #FE1402;
+        }
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
