@@ -229,6 +229,14 @@ A:hover	{ color: #C0C0C0; }
 	  color: #5e8efa; 
 	  font-weight: bold;
 	}
+
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #5E8EFA;
+        }
+
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
