@@ -225,6 +225,14 @@ A:hover	{ color: #202020; }
 	  color: #3C6B65; 
 	  font-weight: bold;
 	}
+
+
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #3c6b65;
+        }
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
