@@ -225,9 +225,16 @@ A:hover	{ color: #333366; }
 .admin  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
-	  color: #E91414; 
+	  color: #9F01B7; 
 	  font-weight: bold;
 	}
+
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #7501A0;
+        }
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
