@@ -225,8 +225,16 @@ A:hover	{ color: #E91414; }
 .admin  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
+	  color: #000000;
 	  font-weight: bold;
 	}
+
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #FB0202;
+        }
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
