@@ -226,7 +226,15 @@ A:hover	{ color: #FFFFC0; }
 	{ 
 	  font-size: 10px;
 	  font-weight: bold;
+	  color:#FFFFFF;
 	}
+
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #9D56ED;
+        }
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
