@@ -229,6 +229,12 @@ A:hover	{ color: #C0C0C0; }
 	  color: #ffffff; 
 	  font-weight: bold;
 	}
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #551F1F;
+        }
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
