@@ -232,6 +232,12 @@ A:hover	{ color: #C0C0C0; }
 	  color: #ffffff; 
 	  font-weight: bold;
 	}
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #000000;
+	}
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
