@@ -227,9 +227,16 @@ A:hover	{ color: #C0C0C0; }
 .admin  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
-	  color: #ffffff; 
+	  color: #EDE1A9; 
 	  font-weight: bold;
 	}
+
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #9C925E;
+        }
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
