@@ -223,6 +223,14 @@ A:hover	{ color: #E91414; }
 	  color: #E91414; 
 	  font-weight: bold;
 	}
+
+.adminform
+        {
+          font-size: 10px;
+          font-weight: bold;
+          color: #e91414;
+        }
+
 .search  /* used in admin bars - the serch text*/
 	{ 
 	  font-size: 10px;
