@@ -1,3 +1,9 @@
+2004-01-28 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b3
+
+	* "Bugfix": - Added new css class .adminform. 
+		    - Set textcolor corresponding in ALL skins.
+		   This fixes the "bug" that text was not readable in admin options.
+
 2004-01-27 Jens Tkotz <jens@peino.de> 1.4.2-RC2-cvs-b2
 
 	* Bugfix: Fixed Bug introduced in 1.4.2-cvs-b11 (by me).
